# AI-Staff-HQ

./: .env.example  .gitignore  AGENTS.md  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION-ALIGNMENT.md  GEMINI.md  GETTING-STARTED.md  HAPPY-PATH.md  IMPLEMENTATION-STATUS.md  MODEL_CONTROL.md  PHASE3-STATUS.md  PHILOSOPHY.md  QUICK-REFERENCE.md  R2N.md  README.md  RESTART.md  ROADMAP.md  ROSTER-plan.md  STAFF-DIRECTORY.md  SWARM_COMPLETE.md  SYNCHRONIZATION-UPDATE.md  USAGE-GUIDE.md  capabilities_test.txt  claude-insights.md  cli-workflow.md  insights.md  multi-platform-workflow.md  polish.md  pyproject.toml  run.sh  single-chat-workflow.md  squads.json  test_swarm_simple.py  user-manual-gemini.md
archive/: HAPPY-PATH.md  R2N.md  README.md  user-manual-gemini.md
config/: model_routing.yaml  specialist_roster.yaml
docs/: CONTRIBUTING.md  FINALIZE.md  QUICK-REFERENCE.md  phase4.md  planning_swarm_evals.md
evals/: planning_swarm_cases.yaml  planning_swarm_real_briefs.yaml
examples/: README.md
handbooks/: README.md  business-strategy.md  creative-writing.md  developer-handbook.md  game-design.md  handbook-template-starter-guide.md  handbook-template.md  kitchen-synergies.md  methods-and-workflows.md  specialized-niches.md  universal.md
knowledge-base/: IMPLEMENTATION_SUMMARY.md  README.md
logs/: 2025-10-08_aether-brew-retrospective.md  README.md
meta/: GAMIFICATION-GUIDE.md  INTEGRATION-NOTES.md  MODEL-SELECTION-GUIDE.md  STAFF-CHANGELOG.md  VERSION-HISTORY.md  repository-metadata.md
orchestrator/: __init__.py  (+5 more)
(+310 files in other folders)
